# Authenticator

./: .gitignore  Cargo.toml  README.md  gen_ec_key.sh
src/: config.rs  db_users.rs  delete.rs  handlers.rs  jwt.rs  login.rs  main.rs  register.rs  types.rs  users.rs
